--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -36,20 +36,20 @@
         }
 
         nav {
-            display: flex;
-            justify-content: space-around;
-            padding: 10px;
             background-color: #444;
+            text-align: center;
         }
 
         nav a {
             text-decoration: none;
             color: white;
+            display: inline-block;
+            padding: 10px 20px;
         }
 
         .content {
             padding: 20px;
-            margin-top: 60px;
+            margin-top: 100px;
         }
 
         .content h2 {
@@ -105,7 +105,7 @@
             <p>
                 Hi there, you can call me Sasank. Welcome to my static page.
                 Highly motivated computer science graduate with 5+ years of programming experience and a software developer with profession IT experience of over 3 years passionate about Salesforce ecosystem and web development. Specialized in Agile, Object Oriented Programming, and Web technology.
-                Always eager to learn new technology and applying them to solve real-world problems by innovative software solutions. Adept at developing CRM solutions for client businesses and identifying opportunities to improve the user experience (Salesforce.com). A fast learner and able to work independently with minimal supervision.
+                Always eager to learn new technology and applying them to solve real-world problems by innovative software solutions. A fast learner and able to work independently with minimal supervision.
                 Involved in end-end project implementation from planning, development, monitoring, delivering and played an active role in all agile ceremonies.
             </p>
         </div>
